old/com_securityHub_vNet_v0_1.json
{
    "$schema": "http://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "complianceProfile": {
            "type": "string",
            "metadata": {
                "description": "PCI or no-PCI"
            },
            "defaultValue": "no-pci",
            "allowedValues": [
				"no-pci",
                "pci"
            ]
        },
        "environment": {
            "type": "string",
            "metadata": {
                "description": "Define environment to deploy in"
            },
            "defaultValue": "development",
            "allowedValues": [
				"production",
                "preproduction",
                "development"
            ]
        },
        "virtualNetworkName": {
            "type": "string",
            "defaultValue": "comit-vnet",
            "metadata": {
                "description": "Name of the existing vNet, Security-Hub"
            }
        },
        "subnetNameDC": {
            "type": "string",
            "defaultValue": "domainControllerSubnet",
            "metadata": {
                "description": "Name for the Domain Controller Subnet"
            }
        },
        "subnetAddressPrefixDC": {
            "type": "string",
            "defaultValue": "10.25.0.0/29",
            "metadata": {
                "description": "CIDR block for Domain Controller Subnet"
            }
        },
        "NSGNameDC": {
            "type": "string",
            "defaultValue": "comit-domainController-nsg",
            "metadata": {
                "description": "Network Security Group Name for Domain Controller Subnet"
            }
        },
        "subnetNameDCMgmt": {
            "type": "string",
            "defaultValue": "domainControllerMgmtSubnet",
            "metadata": {
                "description": "Name for the Domain Controller Management Subnet"
            }
        },
        "subnetAddressPrefixDCMgmt": {
            "type": "string",
            "defaultValue": "10.25.0.8/29",
            "metadata": {
                "description": "CIDR block for Domain Controller Management Subnet"
            }
        },
        "NSGNameDCMgmt": {
            "type": "string",
            "defaultValue": "comit-domainControllerManagement-nsg",
            "metadata": {
                "description": "Network Security Group Name for Domain Controller Management Subnet"
            }
        }
    },
    "variables": {     
        "api-version": "2015-06-15"
    },
    "resources": [     
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('NSGNameDC')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "properties": {
                "securityRules": [
                    {
                    "name": "Allow-Out-DC1",
                        "properties": {
                            "description": "NTP Sync Primary Domain Controller",
                            "protocol": "UDP",
                            "sourcePortRange": "123",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC2",
                        "properties": {
                            "description": "AD RPC Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "135",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC3",
                        "properties": {
                            "description": "AD Kerberos change Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "464",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC4",
                        "properties": {
                            "description": "AD LDAP Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "389",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC5",
                        "properties": {
                            "description": "AD LDAP GC Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "3265",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC6",
                        "properties": {
                            "description": "AD DNS Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "53",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 106,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC7",
                        "properties": {
                            "description": "AD Kerberos Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "88",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 107,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC8",
                        "properties": {
                            "description": "AD SMB Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "445",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 108,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC9",
                        "properties": {
                            "description": "AD DYN Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "49152-65535",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 109,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Deny-Out-DC",
                        "properties": {
                            "description": "Deny all other Outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "destinationAddressPrefix": "*",
                            "access": "Deny",
                            "priority": 110,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "apiVersion": "2015-05-01-preview",
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('NSGNameDCMgmt')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "properties": {
                "securityRules": [
                    {
                    "name": "Allow-Out-DC1",
                        "properties": {
                            "description": "NTP Sync Primary Domain Controller",
                            "protocol": "UDP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "123",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC2",
                        "properties": {
                            "description": "AD RPC Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "135",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 101,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC3",
                        "properties": {
                            "description": "AD Kerberos change Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "464",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 103,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC4",
                        "properties": {
                            "description": "AD LDAP Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "389",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 104,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC5",
                        "properties": {
                            "description": "AD LDAP GC Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "3265",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 105,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC6",
                        "properties": {
                            "description": "AD DNS Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "53",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 106,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC7",
                        "properties": {
                            "description": "AD Kerberos Primary DC",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "88",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 107,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC8",
                        "properties": {
                            "description": "AD SMB Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "445",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 108,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Allow-Out-DC9",
                        "properties": {
                            "description": "AD DYN Primary DC",
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "49152-65535",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Allow",
                            "priority": 109,
                            "direction": "Outbound"
                        }
                    },
                    {
                    "name": "Deny-Out-DC",
                        "properties": {
                            "description": "Deny all other Outbound traffic",
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "*",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "[parameters('subnetAddressPrefixDC')]",
                            "access": "Deny",
                            "priority": 110,
                            "direction": "Outbound"
                        }
                    }
                ]
            }
        },
        {
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetNameDC'))]",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "[variables('api-version')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSGNameDC'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('subnetAddressPrefixDC')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGNameDC'))]"
                }
            }
        },   
        {
            "name": "[concat(parameters('virtualNetworkName'), '/', parameters('subnetNameDCMgmt'))]",
            "type": "Microsoft.Network/virtualNetworks/subnets",
            "apiVersion": "[variables('api-version')]",
            "location": "[resourceGroup().location]",
            "tags": {
                "complianceProfile": "[parameters('complianceProfile')]",
                "environment": "[parameters('environment')]",
                "tier": "communications"
            },
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('NSGNameDCMgmt'))]"
            ],
            "properties": {
                "addressPrefix": "[parameters('subnetAddressPrefixDCMgmt')]",
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('NSGNameDCMgmt'))]"
                }
            }
        }        
    ],
    "outputs": {
    }
}
